--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 New[[:space:]]Terrain.asset filter=lfs diff=lfs merge=lfs -text
 Cliff_Mossy_E_BaseColor filter=lfs diff=lfs merge=lfs -text
+Cliff_Mossy_E_MaskMap filter=lfs diff=lfs merge=lfs -text
+Cliff_Mossy_E_Normal filter=lfs diff=lfs merge=lfs -text
